# unly

./: .gitignore  Cargo.toml  README.md  Welcome.txt  install.sh
.github/: copilot-instructions.md
.github/workflows/: release-main.yml
crates/unly-agent/: Cargo.toml
crates/unly-agent/src/: context.rs  error.rs  lib.rs  runtime.rs  subagent.rs
crates/unly-audit/: Cargo.toml
crates/unly-audit/src/: audit.rs  event.rs  lib.rs
crates/unly-cli/: Cargo.toml
crates/unly-cli/src/: commands.rs  logging.rs  main.rs  service.rs  update.rs
crates/unly-cli/tests/: install_tests.rs
crates/unly-config/: Cargo.toml
crates/unly-config/src/: config.rs  error.rs  lib.rs  loader.rs  secrets.rs  workspace.rs
crates/unly-config/tests/: config_tests.rs
crates/unly-core/: Cargo.toml
crates/unly-core/src/: error.rs  ids.rs  lib.rs  message.rs  model.rs  permissions.rs  provider.rs  tool.rs  types.rs
crates/unly-core/tests/: core_tests.rs
crates/unly-db/: Cargo.toml
crates/unly-db/src/: connection.rs  error.rs  lib.rs
crates/unly-db/src/entity/: audit_log.rs  chat.rs  job.rs  job_run.rs  memory_entry.rs  message.rs  mod.rs  subagents.rs  user.rs
crates/unly-db/src/migration/: m20240101_000001_initial.rs  mod.rs
crates/unly-db/src/repo/: audit.rs  chat.rs  job.rs  memory.rs  mod.rs  user.rs
crates/unly-memory/: Cargo.toml
crates/unly-memory/src/: error.rs  lib.rs  memory.rs  scope.rs  similarity.rs
crates/unly-memory/tests/: similarity_tests.rs
crates/unly-plugins/: Cargo.toml
crates/unly-plugins/src/: error.rs  frontmatter.rs  lib.rs  manifest.rs  plugin.rs  plugin_loader.rs  registry.rs  skill.rs  skill_loader.rs
crates/unly-plugins/tests/: plugin_tests.rs
crates/unly-providers/: Cargo.toml
crates/unly-providers/src/: copilot.rs  error.rs  lib.rs  openai_compat.rs  registry.rs
crates/unly-scheduler/: Cargo.toml
crates/unly-scheduler/src/: error.rs  job.rs  lib.rs  scheduler.rs
crates/unly-telegram/: Cargo.toml
crates/unly-telegram/src/: bot.rs  commands.rs  error.rs  lib.rs  permissions.rs  session.rs
crates/unly-tools/: Cargo.toml
crates/unly-tools/src/: error.rs  lib.rs  policy.rs  registry.rs
crates/unly-tools/src/builtin/: fs.rs  git.rs  http.rs  mod.rs  orchestration.rs  self_config.rs  shell.rs  skills.rs  telegram.rs
crates/unly-tools/tests/: tool_tests.rs
deploy/: unly.env.example  unly.service
docs/: architecture.md  deployment.md  runbook.md  security.md  setup.md
migrations/: 001_initial_schema.sql
plugins/example/: Cargo.toml
plugins/example/src/: lib.rs
