[workspace]
members = [
    "crates/unly-core",
    "crates/unly-config",
    "crates/unly-db",
    "crates/unly-memory",
    "crates/unly-providers",
    "crates/unly-tools",
    "crates/unly-audit",
    "crates/unly-agent",
    "crates/unly-scheduler",
    "crates/unly-plugins",
    "crates/unly-telegram",
    "crates/unly-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["unly contributors"]
license = "GPL-3.0"
repository = "https://github.com/oblivisheee/unly"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# HTTP
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false }

# Database — SeaORM with SQLite backend
sea-orm = { version = "1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
] }
sea-orm-migration = { version = "1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Telegram
teloxide = { version = "0.17", features = ["macros", "rustls"] }

# Cron
cron = "0.16"
tokio-cron-scheduler = "0.10"

# Crypto / security
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
regex = "1"
url = { version = "2", features = ["serde"] }
rand = "0.8"
parking_lot = "0.12"

# Internal crates
unly-core = { path = "crates/unly-core" }
unly-config = { path = "crates/unly-config" }
unly-db = { path = "crates/unly-db" }
unly-memory = { path = "crates/unly-memory" }
unly-providers = { path = "crates/unly-providers" }
unly-tools = { path = "crates/unly-tools" }
unly-audit = { path = "crates/unly-audit" }
unly-agent = { path = "crates/unly-agent" }
unly-scheduler = { path = "crates/unly-scheduler" }
unly-plugins = { path = "crates/unly-plugins" }
unly-telegram = { path = "crates/unly-telegram" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
