[package]
name = "unly-agent"
description = "Agent runtime, context management, subagent orchestration for the unly agent platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
unly-core.workspace = true
unly-config.workspace = true
unly-db.workspace = true
unly-memory.workspace = true
unly-providers.workspace = true
unly-tools.workspace = true
unly-audit.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
futures.workspace = true
