[package]
name = "unly-cli"
description = "CLI and main binary for the unly agent platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "unly"
path = "src/main.rs"

[dependencies]
unly-core.workspace = true
unly-config.workspace = true
unly-db.workspace = true
unly-memory.workspace = true
unly-providers.workspace = true
unly-tools.workspace = true
unly-audit.workspace = true
unly-agent.workspace = true
unly-scheduler.workspace = true
unly-plugins.workspace = true
unly-telegram.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
dialoguer.workspace = true
reqwest.workspace = true
