[package]
name = "unly-core"
description = "Core domain model, shared types, traits, and errors for the unly agent platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
