[package]
name = "unly-memory"
description = "Vector memory subsystem with SQLite-backed cosine similarity search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
unly-core.workspace = true
unly-config.workspace = true
unly-db.workspace = true
unly-providers.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
