[package]
name = "unly-tools"
description = "Secure tool execution framework with typed registry, policy enforcement, and audit logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
unly-core.workspace = true
unly-config.workspace = true
unly-db.workspace = true
unly-scheduler.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
url.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
sea-orm.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
